# one-stop

./: test_policy_query.py
basic/: .copier-answers.yml  .gitignore  AGENTS.md  README.md  check_weaviate_config.py  debug_agent_flow.py  debug_permissions.py  debug_rag.py  pyproject.toml  start-ui.sh  test_embeddings.py  test_workflow.py
basic/data/: api_keys.csv  customers.csv  database_access.csv  employees.csv  financial_reports.csv  ip_whitelist.csv
basic/src/basic/: retrieval.py  workflow.py
basic/src/basic/skills/: core.py  policy_skill.py
basic/tests/: test_placeholder.py
basic/ui/: README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
basic/ui/src/app/: globals.css  layout.tsx  page.tsx
basic/ui/src/components/: ChatInterface.tsx  MinimizedWorkflowStatus.tsx  Sidebar.tsx  StreamingToolCalls.tsx  ThinkingProcess.tsx  ToolCallsDisplay.tsx  WorkflowExecutionView.tsx  WorkflowVisualization.tsx
basic/ui/src/types/: workflow.ts
scripts/: bootstrap_policies.py
